[gd_scene load_steps=10 format=3 uid="uid://nlvhjymubrgp"]

[ext_resource type="Script" path="res://scripts/training.gd" id="1_alt73"]
[ext_resource type="Texture2D" uid="uid://dmnmpgg22xinx" path="res://art/stage1Background.png" id="2_8qltu"]
[ext_resource type="PackedScene" uid="uid://du6oabv526v8a" path="res://scenes/character1.tscn" id="3_rirq4"]
[ext_resource type="Script" path="res://scripts/stage_cam.gd" id="4_0cw3g"]
[ext_resource type="Script" path="res://scripts/health_bar_p1.gd" id="5_sgoq4"]
[ext_resource type="Script" path="res://scripts/health_bar_p2.gd" id="6_yqfwc"]
[ext_resource type="PackedScene" uid="uid://d0vit3ssobmxx" path="res://scenes/pause_menu.tscn" id="7_am2xm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogvlw"]
size = Vector2(3097, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evgoj"]
size = Vector2(60, 1094)

[node name="Node" type="Node"]
script = ExtResource("1_alt73")

[node name="HealthReset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RoundTimer" type="Timer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="stage" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(960, 540)
texture = ExtResource("2_8qltu")
metadata/_edit_group_ = true

[node name="Bounds" type="StaticBody2D" parent="ParallaxBackground"]
position = Vector2(-608, 540)
collision_layer = 3
metadata/_edit_group_ = true

[node name="Floor" type="CollisionShape2D" parent="ParallaxBackground/Bounds"]
position = Vector2(1575, 540)
shape = SubResource("RectangleShape2D_ogvlw")

[node name="LeftWall" type="CollisionShape2D" parent="ParallaxBackground/Bounds"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_evgoj")

[node name="RightWall" type="CollisionShape2D" parent="ParallaxBackground/Bounds"]
position = Vector2(3125, -4)
shape = SubResource("RectangleShape2D_evgoj")

[node name="Player1StartPos" type="Marker2D" parent="."]
position = Vector2(576, 831)

[node name="Player2StartPos" type="Marker2D" parent="."]
position = Vector2(1300, 831)

[node name="Character1" parent="." instance=ExtResource("3_rirq4")]

[node name="Character2" parent="." instance=ExtResource("3_rirq4")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 536)
limit_left = -580
limit_top = 0
limit_right = 2500
limit_bottom = 540
drag_left_margin = 0.0
drag_right_margin = 0.0
script = ExtResource("4_0cw3g")
metadata/_edit_group_ = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HealthBarP1" type="ProgressBar" parent="HUD" node_paths=PackedStringArray("player1")]
offset_left = 91.0
offset_right = 855.0
offset_bottom = 65.0
show_percentage = false
script = ExtResource("5_sgoq4")
player1 = NodePath("../../Character1")
metadata/_edit_group_ = true

[node name="HealthBarP2" type="ProgressBar" parent="HUD" node_paths=PackedStringArray("player2")]
offset_left = 1062.0
offset_right = 1826.0
offset_bottom = 65.0
show_percentage = false
script = ExtResource("6_yqfwc")
player2 = NodePath("../../Character2")
metadata/_edit_group_ = true

[node name="RoundTime" type="Label" parent="HUD"]
offset_left = 896.0
offset_top = -1.0
offset_right = 1023.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="PauseMenu" parent="." instance=ExtResource("7_am2xm")]
visible = false

[connection signal="timeout" from="HealthReset" to="." method="_on_health_reset_timeout"]
[connection signal="health_changed" from="Character1" to="." method="_on_character_1_health_changed"]
[connection signal="health_changed" from="Character2" to="HUD/HealthBarP2" method="_on_character_2_health_changed"]
